# manager-api

./: .env_example  .gitignore  README.md  crypt.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  dashboard_financeiro.py  equipes.py  eventos.py  google_calendar.py  google_drive.py  inventario.py  transacoes.py  users.py
app/core/: config.py  database.py
app/models/: base.py  equipe.py  equipe_drive.py  evento.py  item.py  transacao.py  user.py
app/schemas/: equipe.py  equipe_drive.py  evento.py  item.py  membro.py  transacao.py  user.py
app/services/: equipe_service.py  evento_service.py  google_calendar_service.py  google_drive_service.py  item_service.py  transacao_service.py  user_service.py
app/utils/: crypto.py  security.py
docs/: LM-Cronograma_v.1.1.pod
